src/test/resources/frontendReference/invalid/semanticErr/variables/basicTypeErr06.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:11 -- Incompatible type at "true" (expected: BOOL, actual: STRING)
